Source/Module.css
/*==============================================

		1. Event Custom Listing Page

==============================================*/

.EventHeader, .ResponseHeader, .ResponseRow{clear: both; width: 100%; overflow: hidden;  border-bottom: dotted 1px #ccc;}
	.EventHeader h4, .ResponseHeader h4 {text-transform: uppercase; font-weight: bold; margin-bottom: 0.4em; margin-top: 0; font-size: 100%;}
	.EventHeader .Normal{float:left;width: 15%; margin-right: 3%; text-align: right; color: #666;}
	.EventHeader .NormalBold{float: left; width: 81%; color: #000;}
	.ResponseHeader h4, .ResponseHeader h3, .ResponseRow h3 {display:inline;}
	.ResponseHeader .SortByHeader{width: 49%; float:left;}
	.ResponseHeader .StatusHeader{width: 49%; float:right; text-align: center;}
	.ResponseHeader .StatusTypeHeaders > span{padding-right: 10%;}
	.ResponseRow .EventStats{float:right; width:30%;}
	.ResponseRow .EventStats > a {padding-right: 50%;}
.ResponsesSummary {padding: 25px 0;}
		
/* event calendar display page */
.EventCalendar li { list-style-type: none; }
.RadScheduler_Telerik div.rsHeader p { width:110px; }

.EventCalendar { position:relative; } /*.EventCalendar is position:relative to serve as a base for .NewAppointmentTooltip's position:absolute*/
.NewAppointmentTooltip {background: Transparent url(images/request-appt-background.png) no-repeat; width:150px; height:63px; position:absolute; display:none; padding-top:1em; text-align:center;}

.RadScheduler .rsWrap {margin-bottom: 2px;}
.RadScheduler .rsMonthView .rsWrap {height: 18px !important; width: 100%; overflow: hidden; white-space:nowrap;}
.rsAptContent{padding-left: 2px;}
.rsCell{padding: 0 2px !important;}

.respond-wrap{padding:15px;}
	.respond-wrap h2.Head, .respond-wrap h3.SubHead{margin:0;}

/* event edit page */

.AdminButtons{text-align: left;}

	.AdminButtons a img{padding: 0 6px 0 0;}
	.FooterButtons {padding-top: 3%; }
	.AddEventSuccessMessage {padding-left: 10%; }
	.AddNewEvent {padding-top: 2%; width: 100%; height: 100%;}
	.AddNewEvent h2.SubHead {text-align: left; border-bottom: dashed 1px black; margin-bottom: 1em; padding-bottom: 0.375em; font-size: 125%;}

	.rsAdvRecurrenceFreq:after,	.rsAdvRecurrencePatterns:after{	content:"."; display:block; clear:both; height:0; visibility:hidden;}
	.rsAdvRecurrenceRangePanel ul, .rsAdvRecurrenceRangePanel ul li{ list-style-type: none; list-style: none;}
	.rsAdvRecurrenceRangePanel ul{margin:0.8em 0 0 15px;padding:0;}
	.rsAdvRecurrenceRangePanel label{padding-right: 4px;}

	.rsAdvancedEdit .rsAdvCheckboxWrapper input{vertical-align: middle;}
	.rsAdvancedEdit .rsAdvCheckboxWrapper label{width: auto;}

	.rsAdvRecurrenceFreq{float:left; width:20%; margin:0.8em 0 0 0; border-right:1px solid #dfdfdf;}
	.rsAdvRecurrenceFreq ul{list-style:none;margin:0 0 0 15px;padding:0;}
	.rsAdvRecurrenceFreq ul li{list-style: none;}

	.rsAdvHourly, .rsAdvDaily, .rsAdvWeekly, .rsAdvMonthly, .rsAdvYearly{float:right; width: 78%; margin:0.8em 0 0 0;}
	.rsAdvHourly ul, .rsAdvDaily ul, .rsAdvWeekly ul, .rsAdvMonthly ul, .rsAdvYearly ul {list-style:none;margin:0 0 0 15px;padding:0;width: 390px;}
    .rsAdvHourly li, .rsAdvDaily li, .rsAdvWeekly li, .rsAdvMonthly li, .rsAdvYearly li, .rsAdvRecurrenceRangePanel li,  .rsAdvMoreControls li{margin:0 0 0.3em 0; list-style: none;}

    .rsAdvHourly input, .rsAdvDaily input, .rsAdvWeekly input, .rsAdvMonthly input, .rsAdvYearly input, .rsAdvHourly select, 
	.rsAdvDaily select, .rsAdvWeekly select, .rsAdvMonthly select, .rsAdvYearly select{margin:0 2px;}
    .rsAdvRecurrencePatterns .rsAdvInput, .rsAdvRecurrenceRangePanel .rsAdvInput {width: 30px; padding-left: 1px; padding-right: 1px;}
    .rsAdvRecurrencePatterns .rsAdvWeekly_Weekday{ float: left; width: 100px;}
	.rsAdvRecurrencePatterns ul li	{list-style-type: none;}
	.rsAdvRecurrencePatterns{zoom:1;	}

	
	
	.rsAdvancedEdit fieldset, fieldset.range_of_recurrence{border: 1px #ccc solid;}
		fieldset.range_of_recurrence, fieldset.recurrence_fs, fieldset.registration_fs {margin-left: 10%; margin-top: 15px; background: #fefefe; padding: 5px 10px;}
	.rsAdvancedEdit legend, legend.rsAdvRecurrenceRange, legend.registrationoptions {font-weight: bold; padding: 0 10px;}
	
	.NormalBold.RegCap{padding: 5px 0; display: inline-block;  }
	
	.EventToolTip{padding: 10px; padding-bottom: 0;}
	h2.EventTitleToolTip{margin: 0;}
	.tooltip_buttons{padding: 10px 0;}	


	.AEEventTitle, .AEEventStartDate, .AEEventEndDate, .AEEventLocationAdd, .AEEventEditor, .AEEventFeature, .AEEventRecur, .AEEventRegister, .AEEventTimeZone {clear: both; overflow: hidden; padding-bottom: 0.675em;}
		.AEEventEditor .NormalBold, .AEEventTitle .NormalBold, .AEEventStartDate .NormalBold, .AEEventLocationAdd .NormalBold, .AEEventEndDate .NormalBold, 
		.AEEventFeature .NormalBold, .AEEventRecur .NormalBold, .AEEventRegister .MainLabel, .AEEventTimeZone .NormalBold
		{float:left; width: 20%; margin-right: 3%; text-align: right;}
		.AEEventEditor .Normal, .AEEventTitle .Normal, .AEEventStartDate .Normal, .AEEventLocationAdd .Normal, .AEEventEndDate .Normal, .AEEventFeature .Normal  {float: left; width: 81%;}
/*		.AEEventRecur .Normal, .AEEventRegister .Normal, .AEEventTimeZone .Normal */

		

.AEEventEditor li { list-style-type: none; }
.registerSubmitBt, .registerMessage{margin-top: 0.675em;}


.ResponseHeader{padding: 0.375em 0;}
	.ResponseHeader > p{float: left; width: 49%; margin: 0; font-weight: bold;}
	.StatusTypeHeaders{float: right; width: 49%; text-align: center;}
		.StatusTypeHeaders .Normal{}
		.StatusTypeHeaders p{margin: 0;}

	.ResponseAtt{float: left; width: 49%;}
	.ResponseNotAtt{float: right; width: 49%;}

.ResponseDetailHeader td{background: #fff; color: #000; font-weight: bold; border-top: 1px #555 solid; border-bottom: 1px #333 solid; padding: 10px 0 6px; font-size: 120%;}
.ResponseDetailItem{border-bottom: 1px #ccc dotted; border-top: 1px #ccc dotted; }
.ResponseDetailItem td, .ResponseDetailAltItem td {padding: 8px 0;}
/* ... */

